--- a/app/src/main/res/layout/activity_my_profile.xml
+++ b/app/src/main/res/layout/activity_my_profile.xml
@@ -132,7 +132,7 @@
                 android:visibility="visible">
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/emailWrapper"
+                    android:id="@+id/usernameWrapper"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
@@ -140,7 +140,8 @@
                         android:id="@+id/username"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="8dp"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginEnd="8dp"
                         android:hint="@string/uname"
                         android:inputType="text"
                         android:textSize="16sp" />
@@ -167,7 +168,7 @@
                 android:visibility="gone">
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/deptNumWrapper"
+                    android:id="@+id/NumWrapper"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp">
@@ -176,7 +177,8 @@
                         android:id="@+id/number"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="8dp"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginEnd="8dp"
                         android:hint="@string/phone"
                         android:inputType="phone"
                         android:textSize="16sp" />
@@ -210,7 +212,8 @@
                         android:id="@+id/email"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="8dp"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginEnd="8dp"
                         android:hint="@string/email"
                         android:inputType="textEmailAddress"
                         android:textSize="16sp" />
@@ -270,7 +273,8 @@
                         android:id="@+id/npassword"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="8dp"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginEnd="8dp"
                         android:hint="@string/newpswd"
                         android:inputType="textPassword"
                         android:textSize="16sp" />
@@ -295,7 +299,8 @@
                         android:id="@+id/cpassword"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="8dp"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginEnd="8dp"
                         android:hint="@string/conpswd"
                         android:inputType="textPassword"
                         android:textSize="16sp" />
