--- a/app/src/main/res/layout/layout_loading_dialog.xml
+++ b/app/src/main/res/layout/layout_loading_dialog.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="10dp"
-        android:text="Loading"
+        android:text="@string/loading"
         android:textSize="20sp" />
 
     <com.github.ybq.android.spinkit.SpinKitView xmlns:app="http://schemas.android.com/apk/res-auto"
